--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@ Bokking Form</a>
   <a class="link-box" href="https://rupeekwebsvc.rupeek.com/admin/search" target="_blank">Core DB</a>
   <a class="link-box" href="https://growth.rupeek.com/login" target="_blank">Growth</a>
   <a class="link-box" href="https://app1.leegality.com/login" target="_blank">Leegality</a>
- 
-
+  <a class="link-box" href="https://docs.google.com/forms/d/e/1FAIpQLSekCFOSrNt2mbnpYASRCmzC3S1JVdldkNogI4Do3hZcc2qaYQ/viewform" target="_blank">Un-Resolved SF Tickets</a>
+  <a class="link-box" href="https://docs.google.com/spreadsheets/d/1gHaXfk77Jq9qdwhXA8yl-ctWr7MpHIFKm9sMN4duV_w/edit?gid=1711030327#gid=1711030327" target="_blank">Inhouse Recovery Responses</a>
+  <a class="link-box" href="https://docs.google.com/spreadsheets/d/1VIheON6y-CnGPb-IW1fisXdmnF2UHDwNo-3U13_rNf4/edit?gid=0#gid=0" target="_blank">Post Auction BO Recon</a>
+  <a class="link-box" href="https://docs.google.com/spreadsheets/d/1pJNtuM9AB1dpCK59UfL61tkrMwvfbDoY14WeQ1pRMAI/edit?gid=2142952932#gid=2142952932" target="_blank">Collection ITO Master</a>
+  <a class="link-box" href="https://docs.google.com/spreadsheets/d/1lYFSXfhFiYJx7fwRYyY4MWoCYneBolDyhAOlp60_bz0/edit?gid=888206891#gid=888206891" target="_blank">Collateral Pending at Vault</a>
+  <a class="link-box" href="https://docs.google.com/spreadsheets/d/1AuuTSyZqEFU19uylehNXvhOD-5292GgLl97ZKT05ex0/edit?pli=1&gid=0#gid=0" target="_blank">RE/PR/Ret/Override Active Schemes</a>
 
   <!-- Add more links below as needed -->
 </body>
