--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-Fed-to-RCPL-ITO-Consent-form-PDF/" target="_blank">Fed to RCPL ITO Consent form</a>
   <a class="link-box" href="https://docs.google.com/forms/d/e/1FAIpQLSdNoHUiUOFtBj-NX1CuLRWxp-zXH0sNBKjuunQxHozAOf1tHA/viewform?pli=1&pli=1" target="_blank">ITO / RnRP
 Bokking Form</a>
+  <a class="link-box" href="https://docs.google.com/forms/d/e/1FAIpQLSekCFOSrNt2mbnpYASRCmzC3S1JVdldkNogI4Do3hZcc2qaYQ/viewform" target="_blank">Un-Resolved SF Tickets Form</a>
  <a class="link-box" href="https://docs.google.com/spreadsheets/d/1GvpfvSq6hOlQDJXmUpHKEp0biJvRwI5_Vm4E4_UCO6s/edit?gid=581047884#gid=581047884" target="_blank">PAN Release and Repledge</a>
   <a class="link-box" href="https://rupeekauctionteam.github.io/DA-Calculator/" target="_blank">DA-Calculator</a>
   <a class="link-box" href="https://script.google.com/a/macros/rupeek.com/s/AKfycbzhIz3Z1x3ipHQfXrNlPo9XrRJWSRRS-AOzBkw4tpyvLSs5cfkN1NfDaA1_GLLHJTppwA/exec" target="_blank">Branch Mail Sender</a>
@@ -50,7 +51,6 @@ Bokking Form</a>
   <a class="link-box" href="https://rupeekwebsvc.rupeek.com/admin/search" target="_blank">Core DB</a>
   <a class="link-box" href="https://growth.rupeek.com/login" target="_blank">Growth</a>
   <a class="link-box" href="https://app1.leegality.com/login" target="_blank">Leegality</a>
-  <a class="link-box" href="https://docs.google.com/forms/d/e/1FAIpQLSekCFOSrNt2mbnpYASRCmzC3S1JVdldkNogI4Do3hZcc2qaYQ/viewform" target="_blank">Un-Resolved SF Tickets</a>
   <a class="link-box" href="https://docs.google.com/spreadsheets/d/1gHaXfk77Jq9qdwhXA8yl-ctWr7MpHIFKm9sMN4duV_w/edit?gid=1711030327#gid=1711030327" target="_blank">Inhouse Recovery Responses</a>
   <a class="link-box" href="https://docs.google.com/spreadsheets/d/1VIheON6y-CnGPb-IW1fisXdmnF2UHDwNo-3U13_rNf4/edit?gid=0#gid=0" target="_blank">Post Auction BO Recon</a>
   <a class="link-box" href="https://docs.google.com/spreadsheets/d/1pJNtuM9AB1dpCK59UfL61tkrMwvfbDoY14WeQ1pRMAI/edit?gid=2142952932#gid=2142952932" target="_blank">Collection ITO Master</a>
