--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
       overflow-y: auto;
       padding-bottom: 20px;
     }
+@media (max-width: 768px) {
+    body {
+      padding: 10px;
+    }
+
+    .wrapper {
+      padding: 0 10px 30px;
+      margin: 0 auto;
+    }
+
+    .link-box {
+      font-size: 14px;
+      width: 100%;
+      box-sizing: border-box;
+      margin: 10px 0;
+    }
+
+    h1, h2 {
+      font-size: 18px;
+      text-align: center;
+    }
+
+    h2 {
+      padding: 10px;
+    }
   </style>
 </head>
 <body>
@@ -112,6 +137,7 @@
     <div class="category-content">
       <a class="link-box" href="https://rupeek.lightning.force.com/lightning/page/home" target="_blank">Salesforce</a>
       <a class="link-box" href="https://vaani.rupeek.com/rupeek/agent/agent.php" target="_blank">VAANI</a>
+<a class="link-box" href="https://vaani.rupeek.com/rupeek/admin/admin.php" target="_blank">VAANI Admin</a>
       <a class="link-box" href="https://rupeekwebsvc.rupeek.com/admin/search" target="_blank">Core DB</a>
       <a class="link-box" href="https://growth.rupeek.com/login" target="_blank">Growth</a>
       <a class="link-box" href="https://app1.leegality.com/login" target="_blank">Leegality</a>
