--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
       <a class="link-box" href="https://rupeekwebsvc.rupeek.com/admin/search" target="_blank">Core DB</a>
       <a class="link-box" href="https://growth.rupeek.com/login" target="_blank">Growth</a>
       <a class="link-box" href="https://app1.leegality.com/login" target="_blank">Leegality</a>
+      <a class="link-box" href="https://tableau-prod.rupeek.com/#/site/Rupeek/explore?:iid=27" target="_blank">Tableau</a>
     </div>
   </div>
 
