--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <a class="link-box" href="https://rupeek.lightning.force.com/lightning/page/home" target="_blank">Salesforce</a>
       <a class="link-box" href="https://vaani.rupeek.com/rupeek/agent/agent.php" target="_blank">VAANI Dialer</a>
 <a class="link-box" href="https://vaani.rupeek.com/rupeek/admin/admin.php" target="_blank">VAANI Admin</a>
-      <a class="link-box" href="https://rupeekwebsvc.rupeek.com/admin/search" target="_blank">Core DB</a>
+      <a class="link-box" href="https://rupeekwebsvc.rupeek.com/" target="_blank">Core DB</a>
       <a class="link-box" href="https://growth.rupeek.com/login" target="_blank">Growth</a>
       <a class="link-box" href="https://app1.leegality.com/login" target="_blank">Leegality</a>
       <a class="link-box" href="https://tableau-prod.rupeek.com/#/site/Rupeek/explore?:iid=27" target="_blank">Tableau</a>
