--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     <h2 onclick="toggleCategory(this)">Tools & Calculators</h2>
     <div class="category-content">
       <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-Fed-to-RCPL-ITO-Consent-form-PDF/" target="_blank">Fed to RCPL ITO Consent form</a>
+      <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-RCPL-to-Fed-ITO-Consent-form-PDF/" target="_blank">RCPL to Fed ITO Consent form</a>
       <a class="link-box" href="https://rupeekauctionteam.github.io/DA-Calculator/" target="_blank">DA-Calculator</a>
       <a class="link-box" href="https://script.google.com/a/macros/rupeek.com/s/AKfycbzhIz3Z1x3ipHQfXrNlPo9XrRJWSRRS-AOzBkw4tpyvLSs5cfkN1NfDaA1_GLLHJTppwA/exec" target="_blank">Branch Mail Sender</a>
     </div>
