--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
       <a class="link-box" href="https://growth.rupeek.com/login" target="_blank">Growth</a>
       <a class="link-box" href="https://app1.leegality.com/login" target="_blank">Leegality</a>
       <a class="link-box" href="https://tableau-prod.rupeek.com/#/site/Rupeek/explore?:iid=27" target="_blank">Tableau</a>
+      <a class="link-box" href="https://tableau-prod.rupeek.com/#/site/Rupeek/views/RCPLStatementGenerator/Dashboard?:iid=1" target="_blank">RCPL ledger</a>
     </div>
   </div>
 
