--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 
     <h2 onclick="toggleCategory(this)">Google Sheets</h2>
     <div class="category-content">
+
+      <a class="link-box" href="https://docs.google.com/spreadsheets/d/1_PHE8B9SuC2u6Yi-vE-YmnRZTiEokgw7wGjNDn1NGw4/edit?gid=1468408575#gid=1468408575" target="_blank">Sales Force Tickets Tracker</a>
       <a class="link-box" href="https://docs.google.com/spreadsheets/d/1ejVRg2D8Qp3IBf7NE_L21Wc33eI2C6GU_KWsCmVn3AA/edit?gid=0#gid=0" target="_blank">Pre Auction Calling Sheet</a>
 <a class="link-box" href="https://docs.google.com/spreadsheets/d/1OKTXDIKTCfSjiDsMJivefMOKjGMcmaZsRYEvldDOb6o/edit?gid=0#gid=0" target="_blank">Post Auction Calling Sheet</a>
       <a class="link-box" href="https://docs.google.com/spreadsheets/d/1GvpfvSq6hOlQDJXmUpHKEp0biJvRwI5_Vm4E4_UCO6s/edit?gid=581047884#gid=581047884" target="_blank">PAN Release and Repledge</a>
