--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     html, body {
       margin: 0;
       padding: 10px;
-      background-color: #f4f6f8;
-      font-family: Arial, sans-serif;
+      background-color: #ede4e4;
+      font-family: Verdana;
       text-align: center;
       height: 100%;
       overflow: hidden;
     }
 
     h1 {
-      font-size: 1.8vw;
+      font-size: 1vw;
       color: #333;
       margin-bottom: 10px;
+   
     }
 .wrapper {
       max-width: 900px;
@@ -31,29 +32,29 @@
     h2 {
       font-size: 1.2vw;
       color: #ffffff;
-      background-color: #007bff;
+      background-image: linear-gradient(to right, #ff4d00, #7d20cb);
       padding: 5px;
       border-radius: 6px;
       cursor: pointer;
-      margin-top: 10px;
+      margin-top: 5px;
     }
 
     .link-box {
       display: inline-block;
       background-color: white;
-      padding: 10px 15px;
-      margin: 6px;
+      padding: 5px 5px;
+      margin: 3px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-decoration: none;
-      color: #007bff;
+      color: #000000;
       font-weight: bold;
       transition: background-color 0.2s;
       font-size: 0.9vw;
     }
 
     .link-box:hover {
-      background-color: #e9f0fa;
+      background-color: #849df5;
     }
 
     .category-content {
@@ -128,7 +129,7 @@
       <a class="link-box" href="https://docs.google.com/forms/d/e/1FAIpQLSekCFOSrNt2mbnpYASRCmzC3S1JVdldkNogI4Do3hZcc2qaYQ/viewform" target="_blank">Un-Resolved SF Tickets Form</a>
     </div>
 
-    <h2 onclick="toggleCategory(this)">Tools & Calculators</h2>
+    <h2 onclick="toggleCategory(this)">Consent Letters & Tools</h2>
     <div class="category-content">
       <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-Fed-to-RCPL-ITO-Consent-form-PDF/" target="_blank">Fed to RCPL ITO Consent form</a>
       <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-RCPL-to-Fed-ITO-Consent-form-PDF/" target="_blank">RCPL to Fed ITO Consent form</a>
