--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <h1>Auction Team Links</h1>
+    <h1>Important Links</h1>
 
     <h2 onclick="toggleCategory(this)">Google Sheets</h2>
     <div class="category-content">
