--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-Fed-to-RCPL-ITO-Consent-form-PDF/" target="_blank">Fed to RCPL ITO Consent form</a>
       <a class="link-box" href="https://rupeekauctionteam.github.io/RupeekAuctionTeam-RCPL-to-Fed-ITO-Consent-form-PDF/" target="_blank">RCPL to Fed ITO Consent form</a>
       <a class="link-box" href="https://rupeekauctionteam.github.io/DA-Calculator/" target="_blank">DA-Calculator</a>
-      <a class="link-box" href="https://script.google.com/a/macros/rupeek.com/s/AKfycbwFTJG285Ll4fH2XbVJSTsi0O57cGVCyjo-j4hUlIbsWFtoUg8OwROfP6T-2eqziqvXEQ/exec" target="_blank">Branch Mail Sender</a>
+      <a class="link-box" href="https://script.google.com/macros/s/AKfycby7VMusrV2lcUjt-gd4I7y8roVl3Gu5MTDWekHyXl5sTAjVB3XjUMD0QZJi4lJpMZKWkQ/exec" target="_blank">Branch Mail Sender</a>
     </div>
 
     <h2 onclick="toggleCategory(this)">Platforms</h2>
