--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     <h2 onclick="toggleCategory(this)">Platforms</h2>
     <div class="category-content">
       <a class="link-box" href="https://rupeek.lightning.force.com/lightning/page/home" target="_blank">Salesforce</a>
+      <a class="link-box" href="https://rupeekauctionteam.github.io/DA-Calculator/" target="_blank">DA Calculator</a>
       <a class="link-box" href="https://vaani.rupeek.com/rupeek/agent/agent.php" target="_blank">VAANI Dialer</a>
 <a class="link-box" href="https://vaani.rupeek.com/rupeek/admin/admin.php" target="_blank">VAANI Admin</a>
       <a class="link-box" href="https://rupeekwebsvc.rupeek.com/" target="_blank">Core DB</a>
@@ -156,3 +157,4 @@
   </script>
 </body>
 </html>
+
