--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="category-content">
 
       <a class="link-box" href="https://docs.google.com/spreadsheets/d/1_PHE8B9SuC2u6Yi-vE-YmnRZTiEokgw7wGjNDn1NGw4/edit?gid=1468408575#gid=1468408575" target="_blank">Sales Force Tickets Tracker</a>
-      <a class="link-box" href="https://docs.google.com/spreadsheets/d/1fnvxlbNfkVhcW0Y8DD3e6i_mWy1Zaas_rdq7SOI-3D8/edit?gid=708362608#gid=708362608" target="_blank">Pre Auction Calling Sheet</a>
+      <a class="link-box" href="https://docs.google.com/spreadsheets/d/1tyylsT3-ViFeDp0jqvMfY0S8HB6lAIPTTzptFg5Z-38/edit?gid=0#gid=0" target="_blank">Pre Auction Calling Sheet</a>
 <a class="link-box" href="https://docs.google.com/spreadsheets/d/1OKTXDIKTCfSjiDsMJivefMOKjGMcmaZsRYEvldDOb6o/edit?gid=0#gid=0" target="_blank">Post Auction Calling Sheet</a>
       <a class="link-box" href="https://docs.google.com/spreadsheets/d/1GvpfvSq6hOlQDJXmUpHKEp0biJvRwI5_Vm4E4_UCO6s/edit?gid=581047884#gid=581047884" target="_blank">PAN Release and Repledge</a>
       <a class="link-box" href="https://docs.google.com/spreadsheets/d/1-KGnb0_oKHLJ2-g-GfwKHCO1It_A1iQeAFBpWAbOFJU/edit?gid=1067639263#gid=1067639263" target="_blank">Branch Details</a>
@@ -157,5 +157,6 @@
   </script>
 </body>
 </html>
+
 
 
